feat(index): support branch name and path aliases
A set of name aliases can be specified for a given, existing branch.
This works just like the primary path of the branch and can be used to
access the branch. Only a single path alias can exist at a given time
which points to a single branch document.